--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -23,6 +23,12 @@ FILE(GLOB_RECURSE LIB_SRC
         "${CMAKE_CURRENT_LIST_DIR}/bsp/*.S"
         "${CMAKE_CURRENT_LIST_DIR}/drivers/*.S"
         "${CMAKE_CURRENT_LIST_DIR}/utils/*.S"
+        "${CMAKE_CURRENT_LIST_DIR}/u8g2/csrc/*.c"
+        "${CMAKE_CURRENT_LIST_DIR}/u8g2/csrc/*.h"
+        "${CMAKE_CURRENT_LIST_DIR}/tm1638/*.h"
+        "${CMAKE_CURRENT_LIST_DIR}/tm1638/*.c"
+        "${CMAKE_CURRENT_LIST_DIR}/oled/*.h"
+        "${CMAKE_CURRENT_LIST_DIR}/oled/*.c"
         )
 
 FILE(GLOB_RECURSE ASSEMBLY_FILES
@@ -39,8 +45,6 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/drivers/include ${CMAKE_CURRENT_LI
 SET_PROPERTY(SOURCE ${ASSEMBLY_FILES} PROPERTY LANGUAGE C)
 SET_SOURCE_FILES_PROPERTIES(${ASSEMBLY_FILES} PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp -D __riscv64")
 
-ADD_LIBRARY(kendryte
-        ${LIB_SRC}
-        )
+ADD_LIBRARY(kendryte ${LIB_SRC})
 TARGET_LINK_LIBRARIES(kendryte PUBLIC nncase)
 SET_TARGET_PROPERTIES(kendryte PROPERTIES LINKER_LANGUAGE C)
