--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "lib/tm1638"]
 	path = lib/tm1638
 	url = git@github.com:sreedevk/tm1638-driver-kendryte-sdk.git
+[submodule "lib/u8g2"]
+	path = lib/u8g2
+	url = git@github.com:olikraus/u8g2.git
+[submodule "lib/oled"]
+	path = lib/oled
+	url = git@github.com:sreedevk/u8g2-hal-kendryte-sdk-k210.git
