--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/oled"]
 	path = lib/oled
 	url = git@github.com:sreedevk/u8g2-hal-kendryte-sdk-k210.git
+[submodule "third_party/lcd1602"]
+	path = third_party/lcd1602
+	url = git@github.com:sreedevk/lcd-1602-kendryte-sdk.git
