--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "doc/kendryte-doc-standalone-programming-guide"]
 	path = doc/kendryte-doc-standalone-programming-guide
 	url = git@github.com:kendryte/kendryte-doc-standalone-programming-guide.git
-[submodule "lib/oled"]
-	path = lib/oled
-	url = git@github.com:sreedevk/u8g2-hal-kendryte-sdk-k210.git
+[submodule "third_party/lcd1602"]
+	path = third_party/lcd1602
+	url = git@github.com:sreedevk/lcd-1602-kendryte-sdk.git
