provisions for adding freeRTOS

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,6 +3,7 @@
 # create driver library
 
 ADD_SUBDIRECTORY(nncase)
+# ADD_SUBDIRECTORY(freertos)
 
 FILE(GLOB_RECURSE LIB_SRC
         "${CMAKE_CURRENT_LIST_DIR}/bsp/*.h"
